# openaibuildweek

./: .env.example  .gitignore  DECISIONS.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
app/: page.tsx
app/board/: page.tsx
app/demo/: page.tsx
apps/board/: index.html  package.json  tsconfig.json  vite.config.ts
apps/classroom-compass/: .env.example  DECISIONS.md  DEMO_SCRIPT.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/evidence/: index.html  package.json  vite.config.ts
components/board/: VisualStageProjector.tsx
components/bridges/: DecimalBridge.tsx
components/display/: DisplayShell.tsx
db/: schema.ts
docs/: classroom-agent.md  demo-flow.md  eval-methodology.md  harness.md
domain/: schemas.ts
headless/adapters/: fixture-sensor.ts  json-line-sensor.ts  macos-speech-adapter-Info.plist  whisper-stream-adapter.ts
headless/control/: control-server.ts
headless/core/: turn-filter.ts  tutor-runtime.ts
headless/policies/: arithmetic-tutor-policy.ts
headless/reasoning/: tutor-provider.ts
headless/whiteboard/: excalidraw-tool.ts
scripts/: build-macos-hand-raise-adapter.sh  compare_assistments_runs.py  prepare_assistments.py  replay.py  run_assistments_eval.py  run_ncte_arena.py  run_ncte_eval.py  setup-rtmpose-vision.sh  verify-m0.mjs
server/: __init__.py
server/app/: __init__.py  hub.py  main.py  schema_registry.py
server/tests/: test_board_api.py
tests/: setup.ts
tests/headless/: excalidraw-tool.test.ts  json-line-sensor.test.ts  runtime.test.ts  (+2 more)
(+93 files in other folders)
