[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "teacher-brain"
version = "0.1.0"
description = "The Teacher Brain classroom agent harness"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jsonschema>=4.23,<5",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
