[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "teacher-brain"
version = "0.1.0"
description = "The Teacher Brain classroom agent harness"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jsonschema>=4.23,<5",
  "numpy>=1.26,<2",
  "openai>=2.23,<3",
  "pandas>=2.2,<4",
  "pyBKT==1.4.1",
  "scikit-learn>=1.5,<1.6",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
testpaths = ["server/tests", "packages/evals/tests", "packages/harness/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "server*"]
